--- a/meta-react-capstone/public/index.html
+++ b/meta-react-capstone/public/index.html
@@ -5,39 +5,25 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+    <!-- Add your own description for the Little Lemon restaurant application -->
+    <meta name="description" content="Explore the culinary delights at Little Lemon - Your Ultimate Dining Experience"/>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <!-- Open Graph meta tags for better social sharing -->
+    <!-- Add the Open Graph's title for your Little Lemon restaurant application -->
+    <meta property="og:title" content="Little Lemon Restaurant" />
+    <!-- Add your own description for the Little Lemon restaurant application -->
+    <meta property="og:description" content="Explore the culinary delights at Little Lemon - Your Ultimate Dining Experience"/>
+    <!-- Add your own Open Graph image URL for the Little Lemon restaurant application -->
+    <meta property="og:image" content="your-image-url.jpg" />
+
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- manifest.json provides metadata used when your web app is installed -->
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- Only files inside the `public` folder can be referenced from the HTML -->
     <title>React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
