--- a/meta-react-capstone/public/index.html
+++ b/meta-react-capstone/public/index.html
@@ -20,6 +20,7 @@
     <!-- manifest.json provides metadata used when your web app is installed -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Only files inside the `public` folder can be referenced from the HTML -->
+    <link rel="stylesheet" href="style.css" />
     <title>React App</title>
   </head>
   <body>
